fixing of overflow

--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Raleway', sans-serif;
   height: 100vh;
   height: 100%;
+  overflow-x: hidden;
 }
 .main-wrapper {
   background-color: rgb(12, 18, 44);
